adding test page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://github.com/adivardhan1000/adivardhan" class="btn">View on GitHub</a>
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/adivardhan1000/adivardhan/test" class="btn">Go to test page</a>
     </section>
 
     <section class="main-content">
