--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <a href="index.html"><h1 class="project-name"> Adivardhan Maheshwari </h1></a>
+      <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
       <h2 class="project-tagline">About Me</h2>
       <a href="https://github.com/adivardhan1000/adivardhan" class="btn">View on GitHub</a>
       <!--
