--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <section class="page-header">
       <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
-      <h2 class="project-tagline">Website in development. Updating Projects section.........</h2>
+      <h2 class="project-tagline">Website in development. Updating Projects section</h2>
       <a href="https://github.com/adivardhan1000/adivardhan" class="btn">View on GitHub</a>
       <!--
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
