--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a target="_blank" href="https://bit.ly/adivardhan_linkedin" class="fa fa-linkedin"></a>
 <a target="_blank" href="https://bit.ly/adivardhan_skype" class="fa fa-skype"></a>
 <a target="_blank" href="https://bit.ly/adivardhan_whatsapp" class="fa fa-whatsapp"></a>
-<a target="_blank" href="https://bit.ly/adivardhan_telegram" class="fa fa-telegram"></a>Email at:
+<a target="_blank" href="https://bit.ly/adivardhan_telegram" class="fa fa-telegram"></a>
 <a target="_blank" href="mailto:maheshwariaa_1@rknec.edu" class="fa fa-mail-reply-all"></a>
 
 
