--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
       -->
+      <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
     </section>
@@ -36,23 +37,12 @@
         <div class="background">
             <div class="container">
               <div class="screen">
-                <div class="screen-header">
-                  <div class="screen-header-left">
-                    <div class="screen-header-button close"></div>
-                    <div class="screen-header-button maximize"></div>
-                    <div class="screen-header-button minimize"></div>
-                  </div>
-                  <div class="screen-header-right">
-                    <div class="screen-header-ellipsis"></div>
-                    <div class="screen-header-ellipsis"></div>
-                    <div class="screen-header-ellipsis"></div>
-                  </div>
-                </div>
+                
                 <div class="screen-body">
                   <div class="screen-body-item left">
                     <div class="app-title">
-                      <span>CONTACT</span>
-                      <span>ME</span>
+                      <span>Get In</span>
+                      <span>Touch</span>
                     </div>
                     <div class="app-contact">CONTACT INFO : +91 9819169420</div>
                   </div>
@@ -71,7 +61,6 @@
                         <input class="app-form-control" placeholder="MESSAGE" name="message">
                       </div>
                       <div class="app-form-group buttons">
-                        <button class="app-form-button">CANCEL</button>
                         <button class="app-form-button" tpye="submit">SEND</button>
                       </div>
                     </div>
