--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
 
     <section class="main-content">
 
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
-<!--<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>-->
-
       <footer class="site-footer">
-        <div class="main-content" style="font-size:20px">
+        <div class="main-content" style="font-size:25px" align="center">
           <a target="_blank" href="https://bit.ly/adivardhan_facebook" class="fa fa-facebook"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_twitter" class="fa fa-twitter"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_instagram" class="fa fa-instagram"></a>
