--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                       <span>Get In</span>
                       <span>Touch</span>
                     </div>
-                    <div class="app-contact">CONTACT INFO : +91 9819169420</div>
+                    <div class="app-contact">CONTACT INFO :<br> +91 9819169420</div>
                   </div>
                   <div class="screen-body-item">
                     <div class="app-form">
@@ -56,7 +56,10 @@
                         <input class="app-form-control" placeholder="EMAIL" type="text" name="_replyto">
             
                       </div>
-
+                      <div class="app-form-group">
+                        <input class="app-form-control" placeholder="Mobile No." type="text" name="mobile">
+            
+                      </div>
                       <div class="app-form-group message">
                         <input class="app-form-control" placeholder="MESSAGE" name="message">
                       </div>
