--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       -->
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
+      <a href="/blogs/index" class="btn">Blogs</a>
       <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
 
@@ -35,12 +36,11 @@
 
       <footer class="site-footer">
         <div class="main-content" style="font-size:30px" align="center">
-          <!--
+          
           <a target="_blank" href="https://bit.ly/adivardhan_facebook" class="fa fa-facebook"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_twitter" class="fa fa-twitter"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_instagram" class="fa fa-instagram"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_telegram" class="fa fa-telegram"></a>
-          -->
           <a target="_blank" href="https://bit.ly/adivardhan_linkedin" class="fa fa-linkedin"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_skype" class="fa fa-skype"></a>
           <a target="_blank" href="https://bit.ly/adivardhan_whatsapp" class="fa fa-whatsapp"></a>
