--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <body>
     <section class="page-header">
       <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
-      <h2 class="project-tagline">Website in development. Updating Projects section</h2>
+      <h2 class="project-tagline">Website in development.</h2>
       <!--
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
@@ -30,6 +30,8 @@
       <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
+      <a href="/blogs/index" class="btn">Blogs</a>
+      <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
         <form
         action="https://formspree.io/xvowljkl"
