--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
   <body>
     <section class="page-header">
       <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
-      <h2 class="project-tagline">Website in development. Updating Projects section</h2>
+      <h2 class="project-tagline">Website in development.</h2>
       <!--
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
       -->
+      <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
       <a href="/blogs/index" class="btn">Blogs</a>
