--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <a href="/blogs/index" class="btn">Blogs</a>
       <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
-
+    <main id="content" class="main-content" role="main">
+      I am Electronics and Communication graduate form RCOEM, Nagpur.
+    </main>
     <section class="main-content">
 
       <footer class="site-footer">
