--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
-      <a href="/blogs/index" class="btn">Blogs</a>
+      <a href="/blog.html" class="btn">Blogs</a>
       <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
     <main id="content" class="main-content" role="main">
