--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
-      <a href="/blogs/index" class="btn">Blogs</a>
+      <a href="/blog.html" class="btn">Blogs</a>
       <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
         <form
