--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
     <main id="content" class="main-content" role="main">
-      I am Electronics and Communication graduate form RCOEM, Nagpur.
+      <div style="font-size:30px" align="center">
+      Software Development Engineer<br>
+      Python | IOT & Embedded Systems
+        </div>
     </main>
     <section class="main-content">
 
