added python classes

--- a/pythonclasses/enquiry.html
+++ b/pythonclasses/enquiry.html
@@ -37,18 +37,7 @@
     <a href="/blog.html" class="btn">Blogs</a>
     <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
 </section>
-<div id="medium-widget"></div>
-<script src="https://medium-widget.pixelpoint.io/widget.js"></script>
-<script>MediumWidget.Init({renderTo: '#medium-widget',
-    params: {
-        "resource": "https://medium.com/@adivardhan",
-        "postsPerLine": 1,
-        "limit": 10,
-        "picture": "small",
-        "fields": ["description", "author", "claps", "likes", "publishAt"],
-        "ratio": "original"
-    }
-})</script>
+<iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__snVxPlURENPTUxLQlFLU0tTR0ZJU01HNTBYNFJNNi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
 
 <section class="main-content">
 
