--- a/pythonclasses/enquiry.html
+++ b/pythonclasses/enquiry.html
@@ -37,10 +37,12 @@
     <a href="/blog.html" class="btn">Blogs</a>
     <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
 </section>
-<iframe width="100%" height= "1500px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__snVxPlURENPTUxLQlFLU0tTR0ZJU01HNTBYNFJNNi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+
+
 
 <section class="main-content">
-
+If you can't view the form, kindly scroll below and click on "Fill out the form".
+<iframe width="100%" height= "1500px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__snVxPlURENPTUxLQlFLU0tTR0ZJU01HNTBYNFJNNi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     <footer class="site-footer">
         <div class="main-content" style="font-size:25px" align="center">
             <a target="_blank" href="https://bit.ly/adivardhan_facebook" class="fa fa-facebook"></a>
