--- a/sasprintpack/contact.html
+++ b/sasprintpack/contact.html
@@ -27,29 +27,29 @@
     <div class="container"><div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScyTM2sHsftNrPeleoAVxnNdcmew6ScRBZtIUsiFFL8dw1_sQ/viewform?embedded=true" width="100%" height="833" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div></div>
-    <footer>
-        <div class="row">
-            <div class="col-sm-6 col-md-4 footer-navigation">
-                <h3><a href="#">Company<span>logo </span></a></h3>
-                <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> ·&nbsp;</strong></p>
-                <p class="company-name">SAS Print Pack © 2015 </p>
-            </div>
-            <div class="col-sm-6 col-md-4 footer-contacts-icon">
-                <div><span class="fa fa-map-marker footer-contacts-icon"> </span></div>
-                <div>
-                    <p class="footer-center-info email text-left"> <i class="fa fa-phone footer-contacts-icon"></i>+1 555 123456</p>
-                </div>
-                <div><i class="fa fa-envelope footer-contacts-icon"></i><a href="#" target="_blank">support@company.com</a>
-                    <p> </p>
-                </div>
-                <div><a href="#"><i class="icon ion-social-facebook fa footer-contacts-icon"></i></a><a href="#" target="_blank">support@company.com</a>
-                    <p> </p>
-                </div>
-            </div>
-            <div class="clearfix"></div>
-            <div class="col-md-4 footer-about"><iframe allowfullscreen frameborder="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14895.934689633967!2d75.0476154!3d21.0333393!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ff8de6cf82dc316!2sSAS%20Print%20Pack!5e0!3m2!1sen!2sin!4v1611413850496!5m2!1sen!2sin" width="100%" height="400" ></iframe></div>
+<footer>
+    <div class="row">
+        <div class="col-sm-6 col-md-4 footer-navigation">
+            <h3><a href="#">Company<span>logo </span></a></h3>
+            <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> ·&nbsp;</strong></p>
+            <p class="company-name">SAS Print Pack © 2015 </p>
         </div>
-    </footer>
+        <div class="col-sm-6 col-md-4 footer-contacts-icon">
+            <div><span class="fa fa-map-marker footer-contacts-icon"> </span><a href="" target="_blank"><br>B20, R.K.Patel Nagar, <br>Opp. Hanuman Mandir,<br>Amalner, Maharashtra - 425401<br><br></a></div>
+            <div>
+                <p class="footer-center-info email text-left"> <i class="fa fa-phone footer-contacts-icon"></i>+91&nbsp;7020930721</p>
+            </div>
+            <div><i class="fa fa-envelope footer-contacts-icon"></i><a href="mailto:sasprintpack@gmail.com" target="_blank">sasprintpack@gmail.com</a>
+                <p> </p>
+            </div>
+            <div><a href="#"></a>
+                <p> </p>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="col-md-4 footer-about"><iframe allowfullscreen frameborder="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14895.934689633967!2d75.0476154!3d21.0333393!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ff8de6cf82dc316!2sSAS%20Print%20Pack!5e0!3m2!1sen!2sin!4v1611413850496!5m2!1sen!2sin" width="100%" height="400" ></iframe></div>
+    </div>
+</footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.min.js"></script>
