--- a/sasprintpack/index.html
+++ b/sasprintpack/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><i class="fa fa-phone icon"></i>
                     <h3 class="name">Customer Satisfaction</h3>
-                    <p class="description">Customer Satisfaction is our number one priority and we pride ourselves on that. All our customers have highly rated us and recommend us greatly.</p>
+                    <p class="description">Customer Satisfaction is our top priority and we pride ourselves on that. All our customers have highly rated us and recommend us greatly.</p>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
     <footer>
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
-                <h3><a href="#">Company<span>logo </span></a></h3>
+                <img height="10%" src="assets/img/saslogo.jpg">
                 <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> ·&nbsp;</strong></p>
                 <p class="company-name">SAS Print Pack © 2015 </p>
             </div>
