--- a/sasprintpack/contact.html
+++ b/sasprintpack/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SAS Print Pack</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -30,7 +31,7 @@
 <footer>
     <div class="row">
         <div class="col-sm-6 col-md-4 footer-navigation">
-            <h3><a href="#">Company<span>logo </span></a></h3>
+            <img height="10%" src="assets/img/saslogo.jpg">
             <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> ·&nbsp;</strong></p>
             <p class="company-name">SAS Print Pack © 2015 </p>
         </div>
