--- a/sasprintpack/index.html
+++ b/sasprintpack/index.html
@@ -98,24 +98,27 @@
     <footer>
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
-                <img height="10%" src="assets/img/saslogo.jpg">
-                <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> ·&nbsp;</strong></p>
+                <h3><a href="#">Company<span>logo </span></a></h3>
+                <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> · </strong></p>
+                <p class="links" style="font-weight: 400;"><strong> · </strong><a href="products.html#25kg_packaging_bag_5_1000">Cotton Toolkit Bag</a><br /><strong>· </strong><a href="products.html#brand_advertising_bag_5_5000">Canvas Bag</a><br /><strong>· </strong><a href="products.html#canvas_bag_10_500">Brand Advertising Bag</a><br /><strong>· </strong><a href="products.html#coated_cotton_bag_10_1000">Coated Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_bag_3_1000">Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_grocery_bag_5_1000">Cotton Grocery Bag</a><br /><strong>· </strong><a href="products.html#cotton_paper_stand_20_500">Cotton Paper Stand</a><br /><strong>· </strong><a href="products.html#cotton_tarpoline_toolkit_bag_20_1000">Cotton Tarpoline Toolkit Bag</a><br /><strong>· </strong><a href="products.html#shopping_bag_5_3000">Shopping Bag</a><br /><strong>· </strong><a href="products.html#product_promotional_bag_5_3000">Promotional Bag</a><br /><br /><br /></p>
                 <p class="company-name">SAS Print Pack © 2015 </p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts-icon">
-                <div><span class="fa fa-map-marker footer-contacts-icon"> </span><a href="" target="_blank"><br>B20, R.K.Patel Nagar, <br>Opp. Hanuman Mandir,<br>Amalner, Maharashtra - 425401<br><br></a></div>
+                <div><span class="fa fa-map-marker footer-contacts-icon"></span><a href target="_blank"><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></a></div>
                 <div>
-                    <p class="footer-center-info email text-left"> <i class="fa fa-phone footer-contacts-icon"></i>+91&nbsp;7020930721</p>
+                    <p class="footer-center-info email text-left"><i class="fa fa-phone footer-contacts-icon"></i>+91 7020930721</p>
                 </div>
                 <div><i class="fa fa-envelope footer-contacts-icon"></i><a href="mailto:sasprintpack@gmail.com" target="_blank">sasprintpack@gmail.com</a>
-                    <p> </p>
+                    <p></p>
                 </div>
                 <div><a href="#"></a>
-                    <p> </p>
+                    <p></p>
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="col-md-4 footer-about"><iframe allowfullscreen frameborder="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14895.934689633967!2d75.0476154!3d21.0333393!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ff8de6cf82dc316!2sSAS%20Print%20Pack!5e0!3m2!1sen!2sin!4v1611413850496!5m2!1sen!2sin" width="100%" height="400" ></iframe></div>
+            <div class="col-md-4 footer-about">
+                <div></div>
+            </div>
         </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
