--- a/sasprintpack/products.html
+++ b/sasprintpack/products.html
@@ -35,7 +35,7 @@
                     <!--start of first row-->
                     <div class="row">
                         <!--start of first item-->
-                        <div class="col-sm-3">
+                        <div id="25kg_packaging_bag_5_1000" class="col-sm-3" >
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/25kg_packaging_bag_5_1000/1.jpeg" class="img-responsive" alt="25kg packaging bag" />
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <!--star of second item-->
-                        <div class="col-sm-3">
+                        <div id="brand_advertising_bag_5_5000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/brand_advertising_bag_5_5000/1.jpeg" class="img-responsive" alt="brand advertising bag" />
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <!--star of third item-->
-                        <div class="col-sm-3">
+                        <div id="canvas_bag_10_500" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/canvas_bag_10_500/1.jpeg" class="img-responsive" alt="Canvas Bag" />
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <!--star of fourth item-->
-                        <div class="col-sm-3">
+                        <div id="coated_cotton_bag_10_1000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/coated_cotton_bag_10_1000/1.jpeg" class="img-responsive" alt="Coated Cotten Bag" />
@@ -165,7 +165,7 @@
                     <!--start of second row-->
                     <div class="row">
                         <!--start of first item-->
-                        <div class="col-sm-3">
+                        <div id="cotton_bag_3_1000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/cotton_bag_3_1000/1.jpeg" class="img-responsive" alt="Cotton bag" />
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                         <!--star of second item-->
-                        <div class="col-sm-3">
+                        <div id="cotton_grocery_bag_5_1000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/cotton_grocery_bag_5_1000/1.jpeg" class="img-responsive" alt="Cotton Grocery Bag" />
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                         <!--star of third item-->
-                        <div class="col-sm-3">
+                        <div id="cotton_packaging_bag_5_1000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/cotton_packaging_bag_5_1000/1.jpeg" class="img-responsive" alt="Cotton Packaging Bag" />
@@ -258,7 +258,7 @@
                             </div>
                         </div>
                         <!--star of fourth item-->
-                        <div class="col-sm-3">
+                        <div id="cotton_paper_stand_20_500" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/cotton_paper_stand_20_500/1.jpeg" class="img-responsive" alt="Cotton Paper Stand" />
@@ -295,7 +295,7 @@
                     <!--start of third row-->
                     <div class="row">
                         <!--start of first item-->
-                        <div class="col-sm-3">
+                        <div id="cotton_tarpoline_toolkit_bag_20_1000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/cotton_tarpoline_toolkit_bag_20_1000/1.jpeg" class="img-responsive" alt="Cotton Tarpoline Toolkit bag" />
@@ -327,7 +327,7 @@
                         </div>
                         <!--star of second item-->
                         <div class="col-sm-3">
-                            <div class="col-item">
+                            <div id="cotton_toolkit_bag_20_1000" class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/cotton_toolkit_bag_20_1000/1.jpeg" class="img-responsive" alt="Cotton Toolkit Bag" />
                                 </div>
@@ -357,7 +357,7 @@
                             </div>
                         </div>
                         <!--star of third item-->
-                        <div class="col-sm-3">
+                        <div id="product_promotional_bag_5_3000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/product_promotional_bag_5_3000/1.jpeg" class="img-responsive" alt="Product Promotional Bag" />
@@ -388,7 +388,7 @@
                             </div>
                         </div>
                         <!--star of fourth item-->
-                        <div class="col-sm-3">
+                        <div id="shopping_bag_5_3000" class="col-sm-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="assets/img/shopping_bag_5_3000/1.jpg" class="img-responsive" alt="Shopping Bag" />
@@ -429,24 +429,27 @@
 <footer>
     <div class="row">
         <div class="col-sm-6 col-md-4 footer-navigation">
-            <img height="10%" src="assets/img/saslogo.jpg">
-            <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> ·&nbsp;</strong></p>
+            <h3><a href="#">Company<span>logo </span></a></h3>
+            <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> · </strong></p>
+            <p class="links" style="font-weight: 400;"><strong> · </strong><a href="products.html#25kg_packaging_bag_5_1000">Cotton Toolkit Bag</a><br /><strong>· </strong><a href="products.html#brand_advertising_bag_5_5000">Canvas Bag</a><br /><strong>· </strong><a href="products.html#canvas_bag_10_500">Brand Advertising Bag</a><br /><strong>· </strong><a href="products.html#coated_cotton_bag_10_1000">Coated Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_bag_3_1000">Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_grocery_bag_5_1000">Cotton Grocery Bag</a><br /><strong>· </strong><a href="products.html#cotton_paper_stand_20_500">Cotton Paper Stand</a><br /><strong>· </strong><a href="products.html#cotton_tarpoline_toolkit_bag_20_1000">Cotton Tarpoline Toolkit Bag</a><br /><strong>· </strong><a href="products.html#shopping_bag_5_3000">Shopping Bag</a><br /><strong>· </strong><a href="products.html#product_promotional_bag_5_3000">Promotional Bag</a><br /><br /><br /></p>
             <p class="company-name">SAS Print Pack © 2015 </p>
         </div>
         <div class="col-sm-6 col-md-4 footer-contacts-icon">
-            <div><span class="fa fa-map-marker footer-contacts-icon"> </span><a href="" target="_blank"><br>B20, R.K.Patel Nagar, <br>Opp. Hanuman Mandir,<br>Amalner, Maharashtra - 425401<br><br></a></div>
+            <div><span class="fa fa-map-marker footer-contacts-icon"></span><a href target="_blank"><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></a></div>
             <div>
-                <p class="footer-center-info email text-left"> <i class="fa fa-phone footer-contacts-icon"></i>+91&nbsp;7020930721</p>
+                <p class="footer-center-info email text-left"><i class="fa fa-phone footer-contacts-icon"></i>+91 7020930721</p>
             </div>
             <div><i class="fa fa-envelope footer-contacts-icon"></i><a href="mailto:sasprintpack@gmail.com" target="_blank">sasprintpack@gmail.com</a>
-                <p> </p>
+                <p></p>
             </div>
             <div><a href="#"></a>
-                <p> </p>
+                <p></p>
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="col-md-4 footer-about"><iframe allowfullscreen frameborder="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14895.934689633967!2d75.0476154!3d21.0333393!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ff8de6cf82dc316!2sSAS%20Print%20Pack!5e0!3m2!1sen!2sin!4v1611413850496!5m2!1sen!2sin" width="100%" height="400" ></iframe></div>
+        <div class="col-md-4 footer-about">
+            <div></div>
+        </div>
     </div>
 </footer>
     <script src="assets/js/jquery.min.js"></script>
