--- a/sasprintpack/contact.html
+++ b/sasprintpack/contact.html
@@ -31,7 +31,7 @@
 <footer>
     <div class="row">
         <div class="col-sm-6 col-md-4 footer-navigation">
-            <img src="assets/img/saslogo.jpg" height="10%" width="10%>
+            <img src="assets/img/saslogo.jpg" height="10%" width="10%">
             <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> · </strong></p>
             <p class="links" style="font-weight: 400;"><strong> · </strong><a href="products.html#25kg_packaging_bag_5_1000">Cotton Toolkit Bag</a><br /><strong>· </strong><a href="products.html#brand_advertising_bag_5_5000">Canvas Bag</a><br /><strong>· </strong><a href="products.html#canvas_bag_10_500">Brand Advertising Bag</a><br /><strong>· </strong><a href="products.html#coated_cotton_bag_10_1000">Coated Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_bag_3_1000">Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_grocery_bag_5_1000">Cotton Grocery Bag</a><br /><strong>· </strong><a href="products.html#cotton_paper_stand_20_500">Cotton Paper Stand</a><br /><strong>· </strong><a href="products.html#cotton_tarpoline_toolkit_bag_20_1000">Cotton Tarpoline Toolkit Bag</a><br /><strong>· </strong><a href="products.html#shopping_bag_5_3000">Shopping Bag</a><br /><strong>· </strong><a href="products.html#product_promotional_bag_5_3000">Promotional Bag</a><br /><br /><br /></p>
             <p class="company-name">SAS Print Pack © 2015 </p>
@@ -44,13 +44,14 @@
             <div><i class="fa fa-envelope footer-contacts-icon"></i><a href="mailto:sasprintpack@gmail.com" target="_blank">sasprintpack@gmail.com</a>
                 <p></p>
             </div>
-            <div>
+            <div><a href="#"></a>
                 <p></p>
             </div>
         </div>
         <div class="clearfix">
-        <div class="col-md-4 footer-about">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.9836727584957!2d75.0454267149119!3d21.033339285995893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd92dd43e7dbd59%3A0x9ff8de6cf82dc316!2sSAS%20Print%20Pack!5e0!3m2!1sen!2sin!4v1611497042631!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+            <div class="col-md-4 footer-about">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.9836727584957!2d75.0454267149119!3d21.033339285995893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd92dd43e7dbd59%3A0x9ff8de6cf82dc316!2sSAS%20Print%20Pack!5e0!3m2!1sen!2sin!4v1611497042631!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+            </div>
         </div>
     </div>
 </footer>
