--- a/sasprintpack/index.html
+++ b/sasprintpack/index.html
@@ -98,7 +98,7 @@
     <footer>
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
-                <h3><a href="#">Company<span>logo </span></a></h3>
+                <img src="assets/img/saslogo.jpg" height="10%" width="10%">
                 <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> · </strong></p>
                 <p class="links" style="font-weight: 400;"><strong> · </strong><a href="products.html#25kg_packaging_bag_5_1000">Cotton Toolkit Bag</a><br /><strong>· </strong><a href="products.html#brand_advertising_bag_5_5000">Canvas Bag</a><br /><strong>· </strong><a href="products.html#canvas_bag_10_500">Brand Advertising Bag</a><br /><strong>· </strong><a href="products.html#coated_cotton_bag_10_1000">Coated Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_bag_3_1000">Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_grocery_bag_5_1000">Cotton Grocery Bag</a><br /><strong>· </strong><a href="products.html#cotton_paper_stand_20_500">Cotton Paper Stand</a><br /><strong>· </strong><a href="products.html#cotton_tarpoline_toolkit_bag_20_1000">Cotton Tarpoline Toolkit Bag</a><br /><strong>· </strong><a href="products.html#shopping_bag_5_3000">Shopping Bag</a><br /><strong>· </strong><a href="products.html#product_promotional_bag_5_3000">Promotional Bag</a><br /><br /><br /></p>
                 <p class="company-name">SAS Print Pack © 2015 </p>
